# orders-summary-python

./: .gitignore  README.md  pyproject.toml  report.py
tests/: test_report.py
